; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/txx9/extr_txx9aclc-ac97.c_txx9aclc_ac97_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/txx9/extr_txx9aclc-ac97.c_txx9aclc_ac97_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.snd_soc_dai = type { i32 }
%struct.txx9aclc_plat_drvdata = type { i64 }

@ACCTL_ENLINK = common dso_local global i32 0, align 4
@ACCTLDIS = common dso_local global i64 0, align 8
@txx9aclc_soc_dev = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.platform_device*, %struct.snd_soc_dai*)* @txx9aclc_ac97_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @txx9aclc_ac97_remove(%struct.platform_device* %0, %struct.snd_soc_dai* %1) #0 {
  %3 = alloca %struct.platform_device*, align 8
  %4 = alloca %struct.snd_soc_dai*, align 8
  %5 = alloca %struct.platform_device*, align 8
  %6 = alloca %struct.txx9aclc_plat_drvdata*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %3, align 8
  store %struct.snd_soc_dai* %1, %struct.snd_soc_dai** %4, align 8
  %7 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %4, align 8
  %8 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.platform_device* @to_platform_device(i32 %9)
  store %struct.platform_device* %10, %struct.platform_device** %5, align 8
  %11 = load %struct.platform_device*, %struct.platform_device** %5, align 8
  %12 = call %struct.txx9aclc_plat_drvdata* @platform_get_drvdata(%struct.platform_device* %11)
  store %struct.txx9aclc_plat_drvdata* %12, %struct.txx9aclc_plat_drvdata** %6, align 8
  %13 = load i32, i32* @ACCTL_ENLINK, align 4
  %14 = load %struct.txx9aclc_plat_drvdata*, %struct.txx9aclc_plat_drvdata** %6, align 8
  %15 = getelementptr inbounds %struct.txx9aclc_plat_drvdata, %struct.txx9aclc_plat_drvdata* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @ACCTLDIS, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @__raw_writel(i32 %13, i64 %18)
  store i32* null, i32** @txx9aclc_soc_dev, align 8
  ret void
}

declare dso_local %struct.platform_device* @to_platform_device(i32) #1

declare dso_local %struct.txx9aclc_plat_drvdata* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
